fixed form align center

--- a/styles/theform_style.css
+++ b/styles/theform_style.css
@@ -1,16 +1,20 @@
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
   background-image: url("/images/anime.jpg");
   background-size: 100% auto;
   /* background-repeat: no-repeat; */
   background-position: top;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 form {
   /* display: ; */
   border: 4px solid black;
   /* border-radius: 10px; */
-  margin-top: 100px;
+
   padding: 10px;
   padding-left: 20px;
   padding-top: 30px;
